# simplefin-alerts

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/simplefin_alerts/: __init__.py  __main__.py  cli.py  config.py  notifications.py  simplefin.py
tests/: __init__.py  test_config.py  test_simplefin.py
